# vda5050_msgs

./: CMakeLists.txt
msg/: ActionParameter.msg  ActionState.msg  AgvAction.msg  AgvGeometry.msg  Connection.msg  Factsheet.msg  InstantAction.msg  InteractionZoneState.msg  InteractionZoneStates.msg  LoadSet.msg  LoadSpecification.msg  MapMetaData.msg  MapUpdate.msg  MaxArrayLens.msg  MaxStringLens.msg  NodeState.msg  OptionalParameter.msg  Order.msg  OrderInformation.msg  PhysicalParameters.msg  Position.msg  ProtocolFeatures.msg  ProtocolLimits.msg  State.msg  Timing.msg  Trajectory.msg  TypeSpecification.msg  Visualization.msg  WheelDefinition.msg  ZoneUpdate.msg
