cmake_minimum_required(VERSION 2.8.3)
project(vda5050_msgs)

find_package(catkin REQUIRED COMPONENTS
  message_generation
  message_runtime
  geometry_msgs
  std_msgs
)

add_message_files(
  DIRECTORY
    msg
  FILES
    AGVPosition.msg
    Action.msg
    ActionParameter.msg
    ActionState.msg
    ActionStates.msg
    AgvAction.msg
    AgvGeometry.msg
    BatteryState.msg
    BoundingBoxReference.msg
    Connection.msg
    ControlPoint.msg
    Edge.msg
    EdgeState.msg
    EdgeStates.msg
    Error.msg
    Errors.msg
    ErrorReference.msg
    Factsheet.msg
    InstantAction.msg
    Info.msg
    InfoReference.msg
    Information.msg
    InteractionZoneState.msg
    InteractionZoneStates.msg
    Load.msg
    LoadDimensions.msg
    Loads.msg
    LoadSet.msg
    LoadSpecification.msg
    MapMetaData.msg
    MapUpdate.msg
    MaxArrayLens.msg
    MaxStringLens.msg
    Node.msg
    NodePosition.msg
    NodeState.msg
    NodeStates.msg
    OptionalParameter.msg
    Order.msg
    PhysicalParameters.msg
    Position.msg
    ProtocolFeatures.msg
    ProtocolLimits.msg
    SafetyState.msg
    State.msg
    Timing.msg
    Trajectory.msg
    TypeSpecification.msg
    Velocity.msg
    Visualization.msg
    WheelDefinition.msg
    Zone.msg
    ZoneParameter.msg
    ZonePolygonPoint.msg
    ZoneUpdate.msg
   )
generate_messages(
  DEPENDENCIES
  geometry_msgs
  std_msgs
)

catkin_package(
  CATKIN_DEPENDS
    std_msgs
    message_generation
    message_runtime
)
